[v8r8]
use DIRAC v6r17p21

* adding the Output Files Visibility
* add stepid to the primary key and correct the tests
* add the file types to the tests
* add ; as separator
* allow to change the number of printed LFNs fix check when SEs are specified
* use the filetypeid insetad of the name
* user jobs with inputs to all T1s
* fix error check
* just added some imports
* added script to test interaction with DIRAC environment
* Fix the visibility flag dictionary for MC template - avoid too many try except
* fileid is used instead of filetype
* Fix variable in RecoStripping template
* added script to test interaction with DIRAC environment
* fix logging when no RAW or Buffer replication is required
* New plugin ReplicateToRunDestination
* fix getBKAncestors
* add jsonc
* change qt in Qt
* use Accessible metadata
* fix returned value for addFilesToTransformation in fake client
* fix
* if one SE given replicate with ancestors to that SE
* add activity information
* better output
* allow individual files to be used for trigger rate
* change the lcgBundle
* change name for json file
* change the lcgBundle
* allow to change the step for a given production
* event type has to be number
* add visibility flag to the primary key
* schama changed
* use m2crypto
* use LCG 88
* remove fake name
* Change CMTCONFIG value
* default json file
* rename projectConfig.json
* change filename
* change logic for the config tools
* add qt5 toprepare the migration of the Bookkeeping GUI
* add case for gcc48
* add event type to the productionoutputfiles and correctly fill the tables
* use the productionoutputfiles table for storing the event types
* use the environment variable
* setup Bookkeeping jenkins tests
* adapting integration tests to new outputVisibilityFlag of steps
* simple fixes for log and output
* fixed tests for using outVisibilityFlag
* Use LHCbGrid v11r6
* Fixes according to comments by Federico (see MR https://gitlab.cern.ch/lhcb-dirac/LHCbDIRAC/merge_requests/306)