@@ -7,6 +7,13 @@ Sources
 
 Releases
 {
+  v8r8p1
+  {
+    Modules = LHCbDIRAC:v8r8p1, LHCbWebDIRAC:v4r3p2
+    Depends = DIRAC:v6r17p21
+    LcgVer = 2017-05-23
+  }
+
   v8r8
   {
     Modules = LHCbDIRAC:v8r8, LHCbWebDIRAC:v4r3p2
