@@ -1,3 +1,8 @@
+[v8r8p1]
+use DIRAC v6r17p21
+
+* Fix extra curry brace in recoOutputVisFlag
+
 [v8r8]
 use DIRAC v6r17p21
 
